[package]
name = "olam"
version = "1.0.1"
edition = "2024"
authors = ["Gabriel Xavier <dotxavket@gmail.com>"]
description = "High-performance CLI for worldbuilders and storytellers to manage complex timelines and chronologies. Built in Rust with high-speed memory-mapping and powered by the Tequel cryptographic engine."
license = "BSD-3-Clause"
repository = "https://github.com/G4brielXavier/Olam"
readme = "README.md"
keywords = ["cli", "workflow", "productivity", "management", "timeline"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = { version = "2.0", features = ["serde"] }
colored = "3.1.1"
tequel-rs = { version = "1.2.0", features = ["serde"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
memmap2 = "0.9"
dirs = "6.0"


[[bin]]
name = "olam"
path = "src/main.rs"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"